k8s/sam/sam-svc.yaml
apiVersion: v1
kind: Service
metadata:
   name: sam-service
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: NodePort
  selector:
    service: sam
    environment: dev
    project: sam-solo
