k8s/sam/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-outbound
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      service: sam
      environment: dev
      project: sam-solo
  egress:
  - {}
  policyTypes:
  - Egress
